prometheus-deploy-podman-kube: use bitnami image

--- a/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/values-sololab.yaml
@@ -1,6 +1,9 @@
 global:
   imageRegistry: zot.day0.sololab
 prometheus:
+  image:
+    repository: bitnami/prometheus
+    tag: 3.4.1
   containerPorts: []
   resourcesPreset: "small"
   # configFiles:
