--- a/TerraformWorkShop/Quadlet/consul-server/podman-consul/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/consul-server/podman-consul/values-sololab.yaml
@@ -136,11 +136,25 @@ consul:
 
   podLabels:
     traefik.enable: true
-    traefik.tcp.routers.consul-web.entrypoints: webSecure
-    traefik.tcp.routers.consul-web.rule: HostSNI(`consul.day0.sololab`)
-    traefik.tcp.routers.consul-web.tls.passthrough: true
-    traefik.tcp.routers.consul-web.service: consul-web
-    traefik.tcp.services.consul-web.loadbalancer.server.port: 8501
+    traefik.http.routers.consul-redirect.entrypoints: web
+    traefik.http.routers.consul-redirect.rule: Host(`consul.day0.sololab`)
+    traefik.http.routers.consul-redirect.middlewares: toHttps@file
+    traefik.http.routers.consul-redirect.service: consul
+
+    traefik.http.routers.consul.entrypoints: webSecure
+    traefik.http.routers.consul.rule: Host(`consul.day0.sololab`)
+    traefik.http.routers.consul.tls: true
+    traefik.http.routers.consul.service: consul
+
+    traefik.http.services.consul.loadBalancer.serversTransport: consul@file
+    traefik.http.services.consul.loadbalancer.server.scheme: https
+    traefik.http.services.consul.loadbalancer.server.port: 8501
+
+    # traefik.tcp.routers.consul-web.entrypoints: webSecure
+    # traefik.tcp.routers.consul-web.rule: HostSNI(`consul.day0.sololab`)
+    # traefik.tcp.routers.consul-web.tls.passthrough: true
+    # traefik.tcp.routers.consul-web.service: consul-web
+    # traefik.tcp.services.consul-web.loadbalancer.server.port: 8501
 
   extraEnvVars:
     - name: CONSUL_DISABLE_PERM_MGMT
