--- a/TerraformWorkShop/Quadlet/zot/podman-zot/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/zot/podman-zot/values-sololab.yaml
@@ -66,11 +66,25 @@ zot:
     admin:$2y$05$S94dvsnxtN2tTONk8eTGEuABGfzDAcXXqkWbIg62mHyOe71PWRRGa
   podLabels:
     traefik.enable: true
-    traefik.tcp.routers.zot-web.entrypoints: webSecure
-    traefik.tcp.routers.zot-web.rule: HostSNI(`zot.day0.sololab`)
-    traefik.tcp.routers.zot-web.tls.passthrough: true
-    traefik.tcp.routers.zot-web.service: zot-web
-    traefik.tcp.services.zot-web.loadbalancer.server.port: 5000
+    traefik.http.routers.zot-redirect.entrypoints: web
+    traefik.http.routers.zot-redirect.rule: Host(`zot.day0.sololab`)
+    traefik.http.routers.zot-redirect.middlewares: toHttps@file
+    traefik.http.routers.zot-redirect.service: zot
+
+    traefik.http.routers.zot.entrypoints: webSecure
+    traefik.http.routers.zot.rule: Host(`zot.day0.sololab`)
+    traefik.http.routers.zot.tls: true
+    traefik.http.routers.zot.service: zot
+
+    traefik.http.services.zot.loadBalancer.serversTransport: zot@file
+    traefik.http.services.zot.loadbalancer.server.scheme: https
+    traefik.http.services.zot.loadbalancer.server.port: 5000
+
+    # traefik.tcp.routers.zot-web.entrypoints: webSecure
+    # traefik.tcp.routers.zot-web.rule: HostSNI(`zot.day0.sololab`)
+    # traefik.tcp.routers.zot-web.tls.passthrough: true
+    # traefik.tcp.routers.zot-web.service: zot-web
+    # traefik.tcp.services.zot-web.loadbalancer.server.port: 5000
 
   extraEnvVars:
     - name: TZ
