--- a/TerraformWorkShop/Quadlet/traefik-day0/podman-traefik/traefik-traefik.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day0/podman-traefik/traefik-traefik.yaml
@@ -4,6 +4,11 @@ http:
       redirectScheme:
         scheme: https
         permanent: true
+  serversTransports:
+    zot:
+      serverName: zot.day0.sololab
+      rootcas:
+        - "/etc/traefik/tls/ca.crt"
 tls:
   certificates:
     - certFile: /etc/traefik/tls/day0.crt
