--- a/TerraformWorkShop/Quadlet/vault/podman-vault/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/vault/podman-vault/values-sololab.yaml
@@ -34,11 +34,25 @@ vault:
 
   podLabels:
     traefik.enable: true
-    traefik.tcp.routers.vault-web.entrypoints: webSecure
-    traefik.tcp.routers.vault-web.rule: HostSNI(`vault.day0.sololab`)
-    traefik.tcp.routers.vault-web.tls.passthrough: true
-    traefik.tcp.routers.vault-web.service: vault-web
-    traefik.tcp.services.vault-web.loadbalancer.server.port: 8200
+    traefik.http.routers.vault-redirect.entrypoints: web
+    traefik.http.routers.vault-redirect.rule: Host(`vault.day0.sololab`)
+    traefik.http.routers.vault-redirect.middlewares: toHttps@file
+    traefik.http.routers.vault-redirect.service: vault
+
+    traefik.http.routers.vault.entrypoints: webSecure
+    traefik.http.routers.vault.rule: Host(`vault.day0.sololab`)
+    traefik.http.routers.vault.tls: true
+    traefik.http.routers.vault.service: vault
+
+    traefik.http.services.vault.loadBalancer.serversTransport: vault@file
+    traefik.http.services.vault.loadbalancer.server.scheme: https
+    traefik.http.services.vault.loadbalancer.server.port: 8200
+
+    # traefik.tcp.routers.vault-web.entrypoints: webSecure
+    # traefik.tcp.routers.vault-web.rule: HostSNI(`vault.day0.sololab`)
+    # traefik.tcp.routers.vault-web.tls.passthrough: true
+    # traefik.tcp.routers.vault-web.service: vault-web
+    # traefik.tcp.services.vault-web.loadbalancer.server.port: 8200
 
   extraEnvVars:
     - name: TZ
