--- a/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/prometheus-traefik.yaml
+++ b/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/prometheus-traefik.yaml
@@ -1,21 +1,26 @@
 http:
-  routers:
-    prometheus-redirect:
-      entryPoints:
-        - web
-      middlewares:
-        - toHttps@file
-      rule: Host(`prometheus.day1.sololab`)
-      service: prometheus
+  serversTransports:
     prometheus:
-      entryPoints:
-        - webSecure
-      rule: Host(`prometheus.day1.sololab`)
-      service: prometheus
-      tls:
-        certresolver: internal
-  services:
-    prometheus:
-      loadBalancer:
-        servers:
-          - url: "http://127.0.0.1:9090/"
+      serverName: prometheus.day1.sololab
+      rootcas:
+        - "/etc/traefik/tls/ca.crt"
+  # routers:
+  #   prometheus-redirect:
+  #     entryPoints:
+  #       - web
+  #     middlewares:
+  #       - toHttps@file
+  #     rule: Host(`prometheus.day1.sololab`)
+  #     service: prometheus
+  #   prometheus:
+  #     entryPoints:
+  #       - webSecure
+  #     rule: Host(`prometheus.day1.sololab`)
+  #     service: prometheus
+  #     tls:
+  #       certresolver: internal
+  # services:
+  #   prometheus:
+  #     loadBalancer:
+  #       servers:
+  #         - url: "http://127.0.0.1:9090/"
