zot-deploy-podman-kube: add podRestartPolicy

--- a/TerraformWorkShop/Quadlet/zot/podman-zot/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/zot/podman-zot/values-sololab.yaml
@@ -4,6 +4,7 @@ zot:
     repository: giantswarm/zot
   containerPorts: []
   resourcesPreset: medium
+  podRestartPolicy: OnFailure
   config:
     # https://zotregistry.dev/v2.1.2/admin-guide/admin-configuration/#extensions
     extensions:
