prometheus-deploy-podman-kube: add blackbox exporter container

--- a/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/prometheus-traefik.yaml
+++ b/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/prometheus-traefik.yaml
@@ -4,6 +4,10 @@ http:
       serverName: prometheus.day1.sololab
       rootcas:
         - "/etc/traefik/tls/ca.crt"
+    prometheus-blackbox-exporter:
+      serverName: prometheus-blackbox-exporter.day1.sololab
+      rootcas:
+        - "/etc/traefik/tls/ca.crt"
   # routers:
   #   prometheus-redirect:
   #     entryPoints:
