--- a/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/prometheus/podman-prometheus/values-sololab.yaml
@@ -10,14 +10,30 @@ prometheus:
     traefik.http.routers.prometheus-redirect.entrypoints: web
     traefik.http.routers.prometheus-redirect.rule: Host(`prometheus.day1.sololab`)
     traefik.http.routers.prometheus-redirect.middlewares: toHttps@file
+    traefik.http.routers.prometheus-redirect.service: prometheus
 
     traefik.http.routers.prometheus.entryPoints: webSecure
     traefik.http.routers.prometheus.rule: Host(`prometheus.day1.sololab`)
     traefik.http.routers.prometheus.tls: true
+    traefik.http.routers.prometheus.service: prometheus
 
     traefik.http.services.prometheus.loadBalancer.serversTransport: prometheus@file
     traefik.http.services.prometheus.loadbalancer.server.scheme: https
     traefik.http.services.prometheus.loadbalancer.server.port: 9090
+
+    traefik.http.routers.prometheus-blackbox-exporter-redirect.entrypoints: web
+    traefik.http.routers.prometheus-blackbox-exporter-redirect.rule: Host(`prometheus-blackbox-exporter.day1.sololab`)
+    traefik.http.routers.prometheus-blackbox-exporter-redirect.middlewares: toHttps@file
+    traefik.http.routers.prometheus-blackbox-exporter-redirect.service: prometheus-blackbox-exporter
+
+    traefik.http.routers.prometheus-blackbox-exporter.entryPoints: webSecure
+    traefik.http.routers.prometheus-blackbox-exporter.rule: Host(`prometheus-blackbox-exporter.day1.sololab`)
+    traefik.http.routers.prometheus-blackbox-exporter.tls: true
+    traefik.http.routers.prometheus-blackbox-exporter.service: prometheus-blackbox-exporter
+
+    traefik.http.services.prometheus-blackbox-exporter.loadBalancer.serversTransport: prometheus-blackbox-exporter@file
+    traefik.http.services.prometheus-blackbox-exporter.loadbalancer.server.scheme: https
+    traefik.http.services.prometheus-blackbox-exporter.loadbalancer.server.port: 9115
   # adopt bitnami image user id
   podAnnotations:
     io.podman.annotations.userns: keep-id:uid=1001,gid=1001
@@ -84,9 +100,25 @@ prometheus:
       flags:
         web:
           config:
-            file: /etc/prometheus/web.yml
+            file: /etc/prometheus/server_web.yml
             # listen-address: 127.0.0.1:9090
           enable-remote-write-receiver: true
       extraEnvVars:
         - name: TZ
           value: Asia/Shanghai
+    blackboxExporter:
+      image:
+        repository: bitnami/blackbox-exporter
+        tag: 0.26.0
+      containerPorts: []
+      livenessProbe:
+        enabled: false
+      configFiles:
+        web:
+          tls_server_config:
+            cert_file: /etc/blackbox_exporter/certs/blackboxExporter.crt
+            key_file: /etc/blackbox_exporter/certs/blackboxExporter.key
+      flags:
+        web:
+          config:
+            file: /etc/blackbox_exporter/blackbox_exporter_web.yml
