powerdns-deploy-podman-kube: low down  max-negative-ttl

--- a/TerraformWorkShop/Quadlet/powerdns/podman-powerdns/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/powerdns/podman-powerdns/values-sololab.yaml
@@ -64,4 +64,5 @@ powerdns:
         local-address: 192.168.255.10
         local-port: 53
         forward-zones: day0.sololab=192.168.255.10:1053,day1.sololab=192.168.255.10:1053,consul=192.168.255.10:8600
+        max-negative-ttl: 10
         webserver-address: 192.168.255.10
