--- a/TerraformWorkShop/Quadlet/traefik-day0/podman-traefik/traefik-traefik.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day0/podman-traefik/traefik-traefik.yaml
@@ -4,6 +4,10 @@ http:
       redirectScheme:
         scheme: https
         permanent: true
+    userPass:
+      basicAuth:
+        users:
+          - admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
   serversTransports:
     zot:
       serverName: zot.day0.sololab
