--- a/TerraformWorkShop/Quadlet/traefik-day0/podman-traefik/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day0/podman-traefik/values-sololab.yaml
@@ -52,6 +52,9 @@ traefik:
       #       tlsChallenge: {}
       log:
         level: INFO
+      metrics:
+        prometheus:
+          manualRouting: true
       accessLog: {}
     dynamic:
       # https://traefik.io/blog/traefik-2-tls-101-23b4fbee81f1/
@@ -62,17 +65,23 @@ traefik:
               keyFile: /etc/traefik/tls/day0.key
   podLabels:
     traefik.enable: true
-    traefik.http.middlewares.userPass.basicauth.users: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
     traefik.http.routers.dashboard-redirect.entrypoints: web
     traefik.http.routers.dashboard-redirect.rule: "Host(`traefik.day0.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
     traefik.http.routers.dashboard-redirect.middlewares: toHttps@file
+    traefik.http.routers.dashboard-redirect.service: api@internal
+
     traefik.http.routers.dashboard.entryPoints: webSecure
     traefik.http.routers.dashboard.tls: true
     traefik.http.routers.dashboard.rule: "Host(`traefik.day0.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
     traefik.http.routers.dashboard.service: api@internal
-    traefik.http.routers.dashboard.middlewares: userPass
+    traefik.http.routers.dashboard.middlewares: userPass@file
     # https://community.traefik.io/t/api-not-accessible-when-traefik-in-host-network-mode/13321/2
     traefik.http.services.dashboard.loadbalancer.server.port: 443
+
+    traefik.http.routers.metrics.entryPoints: webSecure
+    traefik.http.routers.metrics.tls: true
+    traefik.http.routers.metrics.rule: "Host(`traefik.day0.sololab`) && PathPrefix(`/metrics`)"
+    traefik.http.routers.metrics.service: prometheus@internal
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
