consul-deploy-podman-quadlet: enable telemetry

--- a/TerraformWorkShop/Quadlet/consul-server/podman-consul/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/consul-server/podman-consul/values-sololab.yaml
@@ -84,6 +84,10 @@ consul:
         internal_rpc:
           # verify_incoming: true
           verify_server_hostname: true
+      # https://developer.hashicorp.com/consul/docs/reference/agent/configuration-file/telemetry
+      telemetry:
+        prometheus_retention_time: 30s
+        disable_hostname: true
   ## @param consul.command Override default container command (useful when using custom images)
   ## ref: https://github.com/hashicorp/consul/blob/v1.20.2/.release/docker/docker-entrypoint.sh#L75
   ## this command is used to set the advertise ip to host ip when consul start
