--- a/TerraformWorkShop/Quadlet/zot/podman-zot/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/zot/podman-zot/values-sololab.yaml
@@ -6,9 +6,9 @@ zot:
   resourcesPreset: medium
   podRestartPolicy: OnFailure
   config:
-    # https://zotregistry.dev/v2.1.2/admin-guide/admin-configuration/#extensions
+    # https://zotregistry.dev/v2.1.5/admin-guide/admin-configuration/#extensions
     extensions:
-      # https://zotregistry.dev/v2.1.2/admin-guide/admin-configuration/#enhanced-searching-and-querying-images
+      # https://zotregistry.dev/v2.1.5/admin-guide/admin-configuration/#enhanced-searching-and-querying-images
       search:
         enable: true
         cve:
@@ -25,8 +25,12 @@ zot:
       scrub:
         enable: true
         interval: "24h"
+      metrics:
+        enable: true
+        prometheus:
+          path: /metrics
     # Network configuration
-    # https://zotregistry.dev/v2.1.2/admin-guide/admin-configuration/#network-configuration
+    # https://zotregistry.dev/v2.1.5/admin-guide/admin-configuration/#network-configuration
     http:
       address: "192.168.255.10"
       port: "5000"
@@ -35,9 +39,9 @@ zot:
         cert: "/etc/zot/certs/server.crt"
         key: "/etc/zot/certs/server.key"
         cacert: "/etc/zot/certs/ca.crt"
-      # https://zotregistry.dev/v2.1.2/admin-guide/admin-configuration/#authentication
+      # https://zotregistry.dev/v2.1.5/admin-guide/admin-configuration/#authentication
       auth:
-        # https://zotregistry.dev/v2.1.2/articles/authn-authz/#htpasswd
+        # https://zotregistry.dev/v2.1.5/articles/authn-authz/#htpasswd
         htpasswd:
           path: /etc/zot/htpasswd
         failDelay: 5
